# multidimensional-sur-interface

./: .gitignore  CMakeLists.txt  LICENSE  README.md  example.py  sur_array.py  sur_utility_rectangle.py
python/: CMakeLists.txt  hilbert.pxd  hilbert_cython.pyx  sur_array.pxd  sur_array_cython.pyx
src/: CMakeLists.txt  hilbert.cpp  hilbert.h  sur_array.cpp  sur_array.h
